--- a/config.json
+++ b/config.json
@@ -4,5 +4,9 @@
         "account_name": "your account name",
         "container_name": "your container name",
         "account_key": "your account shared key"
+    },
+    "auth": {
+        "user1": "password1",
+        "user2": "password2"
     }
 }
